<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/viewBgBlocker"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#D308133A"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cloDiffLegend"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_confirm_box"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txvDiffLegendHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/play"
                android:gravity="center"
                android:shadowColor="@color/cyan"
                android:shadowRadius="10"
                android:text="@string/diff_legend"
                android:textColor="@color/white"
                android:textSize="28sp" />

            <LinearLayout
                android:id="@+id/lloDiffRow1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txvEasy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/bg_diff_text_easy"
                    android:fontFamily="@font/play"
                    android:gravity="center"
                    android:padding="10dp"
                    android:shadowColor="@color/bright_green"
                    android:shadowRadius="10"
                    android:text="@string/easy"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txvNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/bg_diff_text_normal"
                    android:fontFamily="@font/play"
                    android:gravity="center"
                    android:padding="10dp"
                    android:shadowColor="@color/gold"
                    android:shadowRadius="10"
                    android:text="@string/normal"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lloDiffRow2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txvHard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/bg_diff_text_hard"
                    android:fontFamily="@font/play"
                    android:gravity="center"
                    android:padding="10dp"
                    android:shadowColor="@color/bright_red"
                    android:shadowRadius="10"
                    android:text="@string/hard"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txvExtreme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/bg_diff_text_extreme"
                    android:fontFamily="@font/play"
                    android:gravity="center"
                    android:padding="10dp"
                    android:shadowColor="@color/bright_purple"
                    android:shadowRadius="10"
                    android:text="@string/extreme"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lloShowIfQuestHist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/txvCompleted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/bg_diff_text_easy"
                    android:fontFamily="@font/play"
                    android:gravity="center"
                    android:text="@string/completed"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txvAborted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/bg_abort_text"
                    android:fontFamily="@font/play"
                    android:gravity="center"
                    android:text="@string/aborted"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnGoBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_add_quest_cancel"
                    android:fontFamily="@font/play"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:shadowColor="@color/light_gray"
                    android:shadowRadius="10"
                    android:text="@string/return_quest"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>