<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="690dp"
        android:background="@drawable/bg_sidepage_frame"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txvSettingsTitle"
            android:layout_width="315dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_page_title"
            android:backgroundTintMode="add"
            android:fontFamily="@font/schibsted_grotesk"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:shadowColor="@color/cyan"
            android:shadowRadius="10"
            android:text="@string/settings"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <EditText
                android:id="@+id/edtSettingsIgn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:enabled="false"
                android:fontFamily="@font/nanum_myeongjo"
                android:hint="@string/hint_changeIgn"
                android:inputType="text"
                android:maxLength="20"
                android:padding="10dp"
                android:shadowColor="@color/cyan"
                android:shadowRadius="10"
                android:textColor="@color/white"
                android:textColorHint="#D7D7D7"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnEditIgn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/icon_custom_btn"
                android:fontFamily="@font/play"
                android:padding="5dp"
                android:shadowColor="@color/cyan"
                android:shadowRadius="10"
                android:text="@string/change_ign"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/lloHiddenRow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone">

                <Button
                    android:id="@+id/btnChangeBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/bg_change_back"
                    android:fontFamily="@font/play"
                    android:shadowColor="@color/light_gray"
                    android:shadowRadius="10"
                    android:text="@string/back"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btnChangeSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/bg_change_save"
                    android:fontFamily="@font/play"
                    android:shadowColor="@color/bright_green"
                    android:shadowRadius="10"
                    android:text="@string/save_quest"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/nanum_myeongjo"
                    android:gravity="center"
                    android:shadowColor="@color/cyan"
                    android:shadowRadius="10"
                    android:text="@string/user_title"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/txvUserTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/nanum_myeongjo"
                    android:gravity="center"
                    android:shadowRadius="10"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <Button
                android:id="@+id/btnEditTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/icon_custom_btn"
                android:fontFamily="@font/play"
                android:padding="5dp"
                android:shadowColor="@color/cyan"
                android:shadowRadius="10"
                android:text="@string/change_title"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imvSettingsPfp"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/pfp" />

            <Button
                android:id="@+id/btnChangePfp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/icon_custom_btn"
                android:fontFamily="@font/play"
                android:shadowColor="@color/cyan"
                android:shadowRadius="10"
                android:text="@string/change_pfp"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>